Move .git deletion outside of jobs

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ cache:
         - $HOME/.ccache-gcc-4.8
         - $HOME/.ccache-gcc-8
 
+before_install:
+    # Delete .git/ to maximize ccache effectiveness (no version string mismatches)
+    - rm -rf .git
+
 jobs:
     include:
         - name: "Ubuntu 19.04, gcc-8/clang-7, Debug build, run checks and tests"
@@ -16,8 +20,6 @@ jobs:
               - docker pull dnnr/hlwm-ci:disco
               - docker build -t disco --cache-from dnnr/hlwm-ci:disco - <Dockerfile.ci-disco
 
-              # Delete .git/ to maximize ccache effectiveness (no version string mismatches)
-              - rm -rf .git
 
               # Build with clang-7
               - docker run -u $UID -t --rm
