--- a/Dockerfile.ci-disco
+++ b/Dockerfile.ci-disco
@@ -13,9 +13,10 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get -y install \
     libxext-dev \
     libxinerama-dev \
     libxml2-utils \
-    python3.7 \
     ninja-build \
     pkg-config \
+    python3.7 \
+    time \
     tox \
     xdotool \
     xterm \
