--- a/Dockerfile.ci-trusty
+++ b/Dockerfile.ci-trusty
@@ -15,14 +15,5 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get -y install \
     ninja-build \
     pkg-config \
     xterm \
-    xvfb
-
-# Doc deps (disabled for now because they're huge)
-#RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get -y install \
-#    asciidoc \
-#    docbook-xml \
-#    docbook-xsl \
-#    xsltproc
-
-# Clean up:
-RUN rm -rf /var/lib/apt/lists/*
+    xvfb \
+    && rm -rf /var/lib/apt/lists/*
