--- a/Dockerfile.ci-disco
+++ b/Dockerfile.ci-disco
@@ -13,20 +13,18 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get -y install \
     libxext-dev \
     libxinerama-dev \
     libxml2-utils \
-    python3.7 \
     ninja-build \
     pkg-config \
+    python3.7 \
     tox \
     xdotool \
     xterm \
-    xvfb
+    xvfb \
+    && rm -rf /var/lib/apt/lists/*
 
-# Doc deps (disabled for now because they're huge)
-#RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get -y install \
+# Doc deps would be:
+# (not installed for now because they're huge):
 #    asciidoc \
 #    docbook-xml \
 #    docbook-xsl \
 #    xsltproc
-
-# Clean up:
-RUN rm -rf /var/lib/apt/lists/*
