--- a/.travis.yml
+++ b/.travis.yml
@@ -58,7 +58,7 @@ jobs:
               # Build with gcc-4.8 (plain bash one-liner because Python is too old)
               - docker run -u $UID -t --rm
                 --volume=$PWD:/hlwm:rw
-                --volume=$HOME/.ccache-gcc-4.8:$HOME/.ccache:rw
+                --volume=$HOME/.ccache-gcc-4.8:/.ccache:rw
                 --env CC=gcc-4.8
                 --env CXX=g++-4.8
                 trusty
