--- a/Dockerfile.ci-trusty
+++ b/Dockerfile.ci-trusty
@@ -1,6 +1,7 @@
 FROM ubuntu:trusty-20190122
 
 # Build deps
+# TODO: Leave out git (huge and not really needed)
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get -y install \
     ccache \
     cmake3 \
