Reformat oneliner, set ccache limits for gcc-4.8

--- a/.travis.yml
+++ b/.travis.yml
@@ -66,4 +66,7 @@ jobs:
                 --env CC=gcc-4.8
                 --env CXX=g++-4.8
                 trusty
-                bash -c 'cd /tmp; ccache -z; cmake -GNinja -DWITH_DOCUMENTATION=NO -DENABLE_CCACHE=YES /hlwm && time ninja -v -k10; ccache -s'
+                bash -c 'cd /tmp; ccache -z --max-size=500M;
+                cmake -GNinja -DWITH_DOCUMENTATION=NO -DENABLE_CCACHE=YES /hlwm
+                && time ninja -v -k10;
+                ccache -s'
