--- a/.travis.yml
+++ b/.travis.yml
@@ -20,22 +20,7 @@ jobs:
               - docker pull dnnr/hlwm-ci:disco
               - docker build -t disco --cache-from dnnr/hlwm-ci:disco - <Dockerfile.ci-disco
 
-              # Build with clang-7
-              # - docker run -u $UID -t --rm
-                # --volume=$PWD:/hlwm:rw
-                # --volume=$HOME/.ccache-clang-7:/.ccache:rw
-                # disco
-                # /hlwm/ci-build.py --cxx=clang++-7 --cc=clang-7 --build-type=Release --ccache
-
-              # Build with gcc-8 and run tests & checks
-              # - docker run -u $UID --privileged -t --rm
-                # --volume=/etc/passwd:/etc/passwd:ro
-                # --volume=$HOME/.ccache-gcc-8:$HOME/.ccache:rw
-                # --volume=$PWD:/hlwm:rw
-                # disco
-                # /hlwm/ci-build.py --check-using-std --cxx=g++-8 --cc=gcc-8 --build-type=Release --ccache --run-tests
-
-              # Both in one container:
+              # Run builds and tests in Docker container
               - docker run -u $UID --privileged -t --rm
                 --volume=/etc/passwd:/etc/passwd:ro
                 --volume=$HOME/.ccache-gcc-8:$HOME/.ccache-gcc-8:rw
