--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,7 @@ jobs:
           env: TRAVIS_CACHE_ID=disco
           cache:
               directories:
-                  - $HOME/.ccache-clang-7
-                  - $HOME/.ccache-gcc-8
+                  - $HOME/.ccaches-disco
                   - $HOME/.tox-cache
           script:
               # Prepare Docker image with bleeding edge Ubuntu 19.04 (disco)
@@ -24,15 +23,14 @@ jobs:
               # Run builds and tests in Docker container
               - docker run -u $UID --privileged -t --rm
                 --volume=/etc/passwd:/etc/passwd:ro
-                --volume=$HOME/.ccache-gcc-8:$HOME/.ccache-gcc-8:rw
-                --volume=$HOME/.ccache-clang-7:$HOME/.ccache-clang-7:rw
+                --volume=$HOME/.ccaches-disco:/.ccaches:rw
                 --volume=$PWD:/hlwm:rw
                 --volume=$HOME/.tox-cache:/hlwm/.tox:rw
                 disco
                 sh -c '
-                CCACHE_DIR=$HOME/.ccache-clang-7 /hlwm/ci-build.py --cxx=clang++-7 --cc=clang-7 --build-type=Debug --ccache
+                /hlwm/ci-build.py --cxx=clang++-7 --cc=clang-7 --build-type=Debug --ccache=/.ccaches/clang-7
                 &&
-                CCACHE_DIR=$HOME/.ccache-gcc-8 /hlwm/ci-build.py --check-using-std --cxx=g++-8 --cc=gcc-8 --build-type=Debug --ccache --run-tests
+                /hlwm/ci-build.py --check-using-std --cxx=g++-8 --cc=gcc-8 --build-type=Debug --ccache=/.ccaches/gcc-8 --run-tests
                 '
 
 
