--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,16 @@ jobs:
                   - $HOME/.ccaches-disco
                   - $HOME/.tox-cache
           script:
-              # Prepare Docker image with bleeding edge Ubuntu 19.04 (disco)
+              # Fetch our current Ubuntu 19.04 CI image from Docker Hub
+              # (automatically built by Docker):
               - docker pull hlwm/ci:disco
+
+              # Build ad-hoc image, using hub image as cache
+              # (=> does not actually build from scratch if the Dockerfile is
+              # the same):
               - docker build -t disco --cache-from hlwm/ci:disco - <Dockerfile.ci-disco
 
-              # Run builds and tests in Docker container
+              # Run builds and tests using temporary Docker image
               - docker run -u $UID --privileged -t --rm
                 --volume=/etc/passwd:/etc/passwd:ro
                 --volume=$HOME/.ccaches-disco:/.ccaches:rw
@@ -40,11 +45,18 @@ jobs:
               directories:
                   - $HOME/.ccache-gcc-4.8
           script:
-              # Prepare Docker image with Ubuntu 14.04 (trusty)
+              # Fetch our current Ubuntu 14.04 CI image from Docker Hub
+              # (automatically built by Docker):
               - docker pull hlwm/ci:trusty
-              - docker build -t trusty --cache-from hlwm/ci:trusty - <Dockerfile.ci-trusty
 
-              # Build with gcc-4.8 (plain bash one-liner because Python is too old)
+              # Build ad-hoc image, using hub image as cache
+              # (=> does not actually build from scratch if the Dockerfile is
+              # the same):
+              - docker build -t trusty --cache-from hlwm/ci:trusty -
+                <Dockerfile.ci-trusty
+
+              # Build with gcc-4.8 using ad-hoc image (plain bash one-liner
+              # because Python is too old):
               - docker run -u $UID -t --rm
                 --volume=$PWD:/hlwm:rw
                 --volume=$HOME/.ccache-gcc-4.8:/.ccache:rw
