Reformat commands for better readability

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,9 +33,8 @@ jobs:
                 --volume=$HOME/.tox-cache:/hlwm/.tox:rw
                 disco
                 sh -c '
-                /hlwm/ci-build.py --cxx=clang++-7 --cc=clang-7 --build-type=Debug --ccache=/.ccaches/clang-7 --iwyu
-                &&
-                /hlwm/ci-build.py --check-using-std --cxx=g++-8 --cc=gcc-8 --build-type=Debug --ccache=/.ccaches/gcc-8 --run-tests
+                    /hlwm/ci-build.py --cxx=clang++-7 --cc=clang-7 --build-type=Debug --ccache=/.ccaches/clang-7 --iwyu &&
+                    /hlwm/ci-build.py --check-using-std --cxx=g++-8 --cc=gcc-8 --build-type=Debug --ccache=/.ccaches/gcc-8 --run-tests
                 '
 
 
@@ -63,7 +62,10 @@ jobs:
                 --env CC=gcc-4.8
                 --env CXX=g++-4.8
                 trusty
-                bash -c 'cd /tmp; ccache -z --max-size=500M;
-                cmake -GNinja -DWITH_DOCUMENTATION=NO -DENABLE_CCACHE=YES /hlwm
-                && time ninja -v -k10;
-                ccache -s'
+                bash -c '
+                    cd /tmp &&
+                    ccache -z --max-size=500M &&
+                    cmake -GNinja -DWITH_DOCUMENTATION=NO -DENABLE_CCACHE=YES /hlwm &&
+                    time ninja -v -k10 &&
+                    ccache -s
+                    '
