--- a/Dockerfile.ci-disco
+++ b/Dockerfile.ci-disco
@@ -5,9 +5,11 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get -y install \
     ccache \
     clang-7 \
     cmake \
+    curl \
     g++-8 \
     git \
     iwyu \
+    lcov \
     libglib2.0-dev \
     libx11-dev \
     libxext-dev \
