--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,7 +8,7 @@ target_sources(herbstluftwm PRIVATE
     arglist.cpp arglist.h
     attribute.cpp attribute.h attribute_.h
     byname.cpp byname.h
-    childbyindex.cpp childbyindex.h
+    childbyindex.h
     child.h
     completion.h
     entity.cpp entity.h
