--- a/.mergify.yml
+++ b/.mergify.yml
@@ -4,6 +4,7 @@ pull_request_rules:
           - base=winterbreeze
           - status-success=continuous-integration/travis-ci/pr
           - "#approved-reviews-by>=1"
+          - label≠wip
       actions:
           merge:
               method: squash
