Make LAYOUT_… enum a LayoutAlgorithm enum class

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -37,7 +37,7 @@ target_sources(herbstluftwm PRIVATE
     floating.cpp floating.h
     framedecoration.cpp framedecoration.h
     frametree.h frametree.cpp
-    framedata.h
+    framedata.h framedata.cpp
     frameparser.h frameparser.cpp
     hookmanager.cpp hookmanager.h
     ipc-protocol.h
