Add flake8 env for tox

--- a/tox.ini
+++ b/tox.ini
@@ -21,3 +21,14 @@ deps =
 
 ; Pass $PWD as it is when tox is invoked to pytest (used to find hlwm binaries)
 passenv = PWD
+
+[testenv:flake8]
+deps =
+    flake8
+commands = flake8 .
+
+[flake8]
+ignore =
+    E501, # line too long
+    W503, # incompatible with pep8.. "Line break occurred before a binary operator"
+
