Use python-xlib for urgency tests

--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,7 @@ commands = {envpython} -m pytest {posargs}
 deps =
     pytest-xvfb
     pytest-xdist
+    python-xlib
 
 ; Pass $PWD as it is when tox is invoked to pytest (used to find hlwm binaries)
 passenv = PWD
