Tests for ewmhnotify in progress

--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,7 @@ skipsdist = true
 # OBACHT / CAUTION: you need to have xvfb installed (xorg-server-xvfb)
 commands = {envpython} -m pytest {posargs}
 deps =
+    ewmh
     pytest-xvfb
     pytest-xdist
     python-xlib
