--- a/.mergify.yml
+++ b/.mergify.yml
@@ -2,7 +2,7 @@ pull_request_rules:
     - name: automatic merge on CI success and review
       conditions:
           - base=winterbreeze
-          - status-success=continuous-integration/travis-ci/pr
+          - status-success="Travis CI - Pull Request"
           - "#approved-reviews-by>=1"
       actions:
           merge:
