--- a/Dockerfile.ci-trusty
+++ b/Dockerfile.ci-trusty
@@ -12,6 +12,7 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get -y install \
     libxext-dev \
     libxinerama-dev \
     libxml2-utils \
+    libxrandr-dev \
     ninja-build \
     pkg-config \
     xterm \
