Explicitly manage desktop windows
Remember which desktop windows (xfdesktop) we have and force them to
stay below the other windows.

This is an adaption of 184f4b03a8f27563acadd07e0d5421018fe4da08 to the
new code base.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,6 +15,7 @@ target_sources(herbstluftwm PRIVATE
     completion.h
     completion.h completion.cpp
     decoration.cpp decoration.h
+    desktopwindow.h desktopwindow.cpp
     entity.cpp entity.h
     ewmh.cpp ewmh.h
     floating.cpp floating.h
