--- a/ci/Dockerfile.ci-disco
+++ b/ci/Dockerfile.ci-disco
@@ -14,6 +14,7 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get -y install \
     libxext-dev \
     libxinerama-dev \
     libxml2-utils \
+    libxrandr-dev \
     ninja-build \
     pkg-config \
     python3.7 \
