--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,7 @@ set(LICENSEDIR ${DOCDIR}
     CACHE PATH "Install path for license file")
 set(XSESSIONSDIR ${DATADIR}/xsessions
     CACHE PATH "Install path for xsession file")
-set(ZSHCOMPLETIONDIR ${DATADIR}/zsh/functions/Completion/X
+set(ZSHCOMPLETIONDIR ${DATADIR}/zsh/site-functions
     CACHE PATH "Install path for zsh completions file")
 set(BASHCOMPLETIONDIR ${CMAKE_INSTALL_SYSCONF_PREFIX}/bash_completion.d
     CACHE PATH "Install path for bash completions file")
