--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,8 @@ set(XSESSIONSDIR ${DATADIR}/xsessions
     CACHE PATH "Install path for xsession file")
 set(ZSHCOMPLETIONDIR ${DATADIR}/zsh/site-functions
     CACHE PATH "Install path for zsh completions file")
+set(FISHCOMPLETIONDIR ${DATADIR}/fish/vendor_completions.d
+    CACHE PATH "Install path for fish completions file")
 set(BASHCOMPLETIONDIR ${CMAKE_INSTALL_SYSCONF_PREFIX}/bash_completion.d
     CACHE PATH "Install path for bash completions file")
 
