--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,7 +1,7 @@
 pull_request_rules:
     - name: automatic merge on CI success and review
       conditions:
-          - base=winterbreeze
+          - base=master
           - status-success=continuous-integration/travis-ci/pr
           - "#approved-reviews-by>=1"
           - label≠wip
