--- a/tox.ini
+++ b/tox.ini
@@ -34,3 +34,6 @@ ignore =
     E501, # line too long
     W503, # incompatible with pep8.. "Line break occurred before a binary operator"
 
+[pytest]
+markers =
+    exclude_from_coverage: Some tests are not relevant for the coverage report
