--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,9 @@ skipsdist = true
 #  * run a specific single test case: tox -- tests/test_layout.py::test_single_frame_layout
 #  * run tests matching a substring expression: tox -- _remove_
 #  * run tests in parallel: tox -- -n auto
+#
+# Library references:
+#  * ewmh: https://ewmh.readthedocs.io/en/latest/
 ###
 
 ###
