Make keymask attribute of type regex
Introduce a new attribute type for regular expressions and make the
currently non-functional attribute 'keymask' of this type. This will
make the handling of the keymask in the hlwm source easier and give
earlier feedback to the user on syntax errors.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -46,6 +46,7 @@ target_sources(herbstluftwm PRIVATE
     plainstack.h
     panelmanager.h panelmanager.cpp
     rectangle.cpp rectangle.h
+    regexstr.cpp regexstr.h
     rootcommands.cpp rootcommands.h
     root.cpp root.h
     rulemanager.cpp rulemanager.h
