--- a/ci/Dockerfile.ci-disco
+++ b/ci/Dockerfile.ci-disco
@@ -19,6 +19,7 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get -y install \
     pkg-config \
     python3.7 \
     tox \
+    x11-xserver-utils \
     xdotool \
     xterm \
     xvfb \
