--- a/.mergify.yml
+++ b/.mergify.yml
@@ -2,7 +2,7 @@ pull_request_rules:
     - name: automatic merge on CI success and review
       conditions:
           - base=master
-          - status-success=continuous-integration/travis-ci/pr
+          - status-success=Travis CI - Pull Request
           - "#approved-reviews-by>=1"
           - label≠wip
       actions:
