Upgrade CI environment to Ubuntu 19.10 (eoan)
This enables us to upgrade the toolchain to gcc-9/clang-9 (in separate
changes).

--- a/ci/Dockerfile.ci-eoan
+++ b/ci/Dockerfile.ci-eoan
@@ -1,4 +1,4 @@
-FROM ubuntu:disco-20190204
+FROM ubuntu:eoan-20200313
 
 # Build deps
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get -y install \
