Test monitor detection via xinerama
For this, we also need to install Xephyr in the docker image in which we
run tests.

--- a/ci/Dockerfile.ci-eoan
+++ b/ci/Dockerfile.ci-eoan
@@ -25,6 +25,7 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get -y install \
     xdotool \
     xterm \
     xvfb \
+    xserver-xephyr \
     && rm -rf /var/lib/apt/lists/*
 
 # Doc deps would be:
