[WIP] Trick ccache to cache clang-tidy calls

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,11 @@ branches:
 
 jobs:
     include:
-        - name: "Build with most recent GCC & Clang, run tests"
+        - name: "Build with GCC, run tests"
           env: TRAVIS_CACHE_ID=focal
           cache:
               directories:
-                  - $HOME/.ccaches-focal
+                  - $HOME/.ccache-focal-gcc
                   - $HOME/.tox-cache
           script:
               # Fetch our current Ubuntu 20.04 CI image from Docker Hub
@@ -31,19 +31,19 @@ jobs:
               # Perform actual tasks within temporary Docker image
               - docker run -u $UID --privileged -t --rm
                 --volume=/etc/passwd:/etc/passwd:ro
-                --volume=$HOME/.ccaches-focal:/.ccaches:rw
+                --volume=$HOME/.ccache-focal-gcc:/.ccache:rw
                 --volume=$PWD:/hlwm:rw
                 --volume=$HOME/.tox-cache:/hlwm/.tox:rw
                 focal sh -c '
-                    /hlwm/ci/build.py --build-dir=/hlwm/build-clang-10 --cxx=clang++-10 --cc=clang-10 --build-type=Debug --ccache=/.ccaches/clang-10 --compile &&
-                    /hlwm/ci/build.py --build-dir=/hlwm/build-gcc-9 --cxx=g++-9 --cc=gcc-9 --build-type=Debug --ccache=/.ccaches/gcc-9 --compile --run-tests
+                    /hlwm/ci/build.py --build-dir=/hlwm/build --cxx=g++-9 --cc=gcc-9 --build-type=Debug --ccache=/.ccache --compile --run-tests
                 '
               - bash <(curl -s https://codecov.io/bash) -y .codecov.yml -f coverage.info
 
-        - name: "Run linters and static analyzers"
+        - name: "Build with Clang, run linters and static analyzers"
           env: TRAVIS_CACHE_ID=focal-linter
           cache:
               directories:
+                  - $HOME/.ccache-eoan-clang
                   - $HOME/.tox-cache
           script:
               # Fetch our current Ubuntu 20.04 CI image from Docker Hub
@@ -59,9 +59,10 @@ jobs:
               - docker run -u $UID --privileged -t --rm
                 --volume=/etc/passwd:/etc/passwd:ro
                 --volume=$PWD:/hlwm:rw
+                --volume=$HOME/.ccache-eoan-clang:/.ccache:rw
                 --volume=$HOME/.tox-cache:/hlwm/.tox:rw
                 focal sh -c '
-                    /hlwm/ci/build.py --build-dir=/hlwm/build-clang-10 --cxx=clang++-10 --cc=clang-10 --build-type=Debug --check-using-std --iwyu --clang-tidy --flake8
+                    /hlwm/ci/build.py --build-dir=/hlwm/build --cxx=/hlwm/ci/clang++-and-tidy.sh --cc=/hlwm/ci/clang-and-tidy.sh --build-type=Debug --ccache=/.ccache --compile --check-using-std --iwyu --flake8
                 '
 
         - name: "Build for 32bit with ancient GCC on Ubuntu 14.04"
