Add handling of LSAN suppressions

--- a/tox.ini
+++ b/tox.ini
@@ -25,7 +25,8 @@ deps =
     python-xlib
 
 ; Pass $PWD as it is when tox is invoked to pytest (used to find hlwm binaries)
-passenv = PWD
+; LSAN_OPTIONS is used for suppressing warnings about known memory leaks
+passenv = PWD LSAN_OPTIONS
 
 [testenv:flake8]
 deps =
